wip: create enterprise kafka with optional cluster_id
