# openapi/kas-fleet-manager.yaml
@@ -1278,6 +1278,10 @@ components:
           description: billing model to use
           type: string
           nullable: true
+        cluster_id:
+          description: enterprise OSD cluster ID to be used for kafka creation
+          type: string
+          nullable: true
     SupportedKafkaInstanceTypesList:
       allOf:
         - type: object
